Fix nav width - added spacing between nav items on small tablets

--- a/components/Navigation/navigation.module.scss
+++ b/components/Navigation/navigation.module.scss
@@ -79,17 +79,12 @@ $nav-links: home, about us, services, our goal, contact us, locales;
     }
   }
 
-  @include tablet() {
-    & > div {
-      display: inline-flex;
-    }
-  }
-
   @include largeTablet() {
     flex-wrap: nowrap;
     width: 95%;
 
     & > div {
+      display: inline-flex;
       margin: 0;
     }
   }
@@ -135,9 +130,15 @@ $nav-links: home, about us, services, our goal, contact us, locales;
     }
   }
 
+  @include tablet() {
+    li {
+      margin: 30px 0px;
+    }
+  }
+
   @include largeTablet() {
     flex-direction: row;
-    width: 60%;
+    width: 85%;
     height: 100%;
     justify-content: flex-end;
 
@@ -152,6 +153,10 @@ $nav-links: home, about us, services, our goal, contact us, locales;
         margin: 0px;
       }
     }
+  }
+
+  @include desktop() {
+    width: 65%;
   }
 }
 
